--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,10 +1,10 @@
-name: MSBuild
+name: push
 
 on:
   push:
     branches: [ master ]
-  pull_request:
-    branches: [ master ]
+  #pull_request:
+   # branches: [ master ]
 
 env:
   # Path to the solution file relative to the root of the project.
