--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -34,7 +34,8 @@ jobs:
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
       run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
   lint:
-    run-on: windows-latest
+    runs-on: windows-latest
+    steps:
       - name: RunLint
-      working-directory: ${{env.GITHUB_WORKSPACE}}
-      run: echo LINT
+        working-directory: ${{env.GITHUB_WORKSPACE}}
+        run: echo LINT
