--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -45,6 +45,12 @@ jobs:
     runs-on: windows-latest
 
     steps:
+      - name: UploadBinaries
+        uses: actions/upload-artifact@v3
+        with: 
+            name: my-artifact
+            path: x64\Release\
+            if-no-files-found: error
       - name: Setup VStest.exe
         uses: Malcolumnixon/Setup-VSTest@v4
       - name: RunTests
