--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -22,20 +22,30 @@ jobs:
   build:
     runs-on: windows-latest  
     steps:  
+    
     - uses: actions/checkout@v3
 
     - name: Add MSBuild to PATH
-      uses: microsoft/setup-msbuild@v1.0.2
-
-
+      uses: microsoft/setup-msbuild@v1.0.2   
+          
     - name: Build
+          
       working-directory: ${{env.GITHUB_WORKSPACE}}
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
       run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
+    - name: UploadBinaries
+      uses: actions/upload-artifact@v3
+      with: 
+        name: my-artifact
+        path: x64\Release\
+        if-no-files-found: error
+            
   lint:
     runs-on: windows-latest
     steps:
+
+    
       - name: RunLint
         working-directory: ${{env.GITHUB_WORKSPACE}}
         run: echo LINT
@@ -45,14 +55,18 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      - name: UploadBinaries
-        uses: actions/upload-artifact@v3
-        with: 
-            name: my-artifact
-            path: x64\Release\
-            if-no-files-found: error
+    
+
       - name: Setup VStest.exe
         uses: Malcolumnixon/Setup-VSTest@v4
+        
+      - name: DownloadBinaries
+        uses: actions/download-artifact@v3
+        with:
+          name: my-artifact
+          path: X64\Release
+          
+        
       - name: RunTests
         working-directory: ${{env.GITHUB_WORKSPACE}}
         run: VStest.Console.exe  x64\Release\UnitTest1.dll
