--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -72,42 +72,42 @@ jobs:
         run: VStest.Console.exe  x64\Release\UnitTest1.dll
         
     
-    SaveBinary:
-      need: [tests]
-      runs-on: windows-latest
+  SaveBinary:
+    needs: [test]
+    runs-on: windows-latest
 
-      steps:
-      - uses: actions/checkout@v3
+    steps:
+    - uses: actions/checkout@v3
 
-      - name: DownloadBinaries
-        uses: actions/download-artifact@v3
-        with:
-          name: my-artifact
-          path: x64\Release
+    - name: DownloadBinaries
+      uses: actions/download-artifact@v3
+      with:
+        name: my-artifact
+        path: x64\Release
 
-      - name: stage
-        working-directory: ${{env.GITHUB_WORKSPACE}}
-        run: copy x64\Release\PipeplinesExe.exe 
+    - name: stage
+      working-directory: ${{env.GITHUB_WORKSPACE}}
+      run: copy x64\Release\PipeplinesExe.exe 
 
-      - name: addEmail
-        working-directory: ${{env.GITHUB_WORKSPACE}}
-        run: git config --global user.email "olekaspt@mail.uc.edu"
+    - name: addEmail
+      working-directory: ${{env.GITHUB_WORKSPACE}}
+      run: git config --global user.email "olekaspt@mail.uc.edu"
 
-      - name: addName
-        working-directory: ${{env.GITHUB_WORKSPACE}}
-        run: git config --global user.name "Patric Olelas"
+    - name: addName
+      working-directory: ${{env.GITHUB_WORKSPACE}}
+      run: git config --global user.name "Patric Olelas"
 
-      - name: add 
-        working-directory: ${{env.GITHUB_WORKSPACE}}
-        run: git add PipeplinesExe.exe
+    - name: add 
+      working-directory: ${{env.GITHUB_WORKSPACE}}
+      run: git add PipeplinesExe.exe
 
-      - name: commit 
-        working-directory: ${{env.GITHUB_WORKSPACE}}
-        run: git commit -m "generated"
+    - name: commit 
+      working-directory: ${{env.GITHUB_WORKSPACE}}
+      run: git commit -m "generated"
         
-      - name: push 
-        working-directory: ${{env.GITHUB_WORKSPACE}}
-        run: git push
+    - name: push 
+      working-directory: ${{env.GITHUB_WORKSPACE}}
+      run: git push
         
         
       
