--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -75,6 +75,8 @@ jobs:
   SaveBinary:
     needs: [test]
     runs-on: windows-latest
+    permissions:
+      contents: write
 
     steps:
     - uses: actions/checkout@v3
